[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = "py-dbcn"
version = "0.4.0"
description = "Connector for Pythonic interaction with multiple database types."
readme = "readme.md"
authors = [{ name = "Brandon Rodriguez", email = "brodriguez8774@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "database",
    "mysql",
    "postgresql",
]
dependencies = [
#    "mysqlclient",         # Required if connecting to MySQL databases.
#    "psycopg2-binary",     # Required if connecting to PostgreSQL databases.
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pip-tools",
]
doc = [
    "pip-tools",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/brodriguez8774/py-dbcn"
