[metadata]
name = py-dbcn
version = 0.3.3
description = Connector for Pythonic interaction with multiple database types.
long_description = file: readme.md
url = https://github.com/brodriguez8774/py-dbcn
author = Brandon Rodriguez
author_email = brodriguez8774@gmail.com
license = MIT License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
include_package_data = true
packages = find:


# AutoPep8 Config Settings.
[pycodestyle]
max_line_length = 120


# Flake8 Config Settings.
[flake8]
max-line-length = 120
